--- a/ui_components/navbar.html
+++ b/ui_components/navbar.html
@@ -5,17 +5,20 @@
   <li class="w3-hide-medium w3-hide-large w3-green w3-opennav w3-right">
     <a href="javascript:void(0);" onclick="myFunction()">☰</a>
   </li>
-  <li class="w3-navitem w3-padding-16">Portfolio</li>
+  <li class="w3-navitem w3-padding-16">Portfolio <span class="w3-tag w3-round w3-red">Beta</span></li>
   <li class="w3-hide-small"><a class="w3-padding-16" href="#">Home</a></li>
-  <li class="w3-hide-small"><a class="w3-padding-16" href="#">Link 1</a></li>
+  <li class="w3-hide-small"><a class="w3-padding-16" href="#">Skills</a></li>
+  <li class="w3-hide-small"><a class="w3-hide-small w3-padding-16" href="#">Education</a></li>
+  <li class="w3-hide-small"><a class="w3-hide-small w3-padding-16" href="#">Experience</a></li>
+  <li class="w3-hide-small"><a class="w3-hide-small w3-padding-16" href="#">Achievements</a></li>
+  <li class="w3-hide-small"><a class="w3-hide-small w3-padding-16" href="#">Calendar</a></li>
   <li class="w3-hide-small w3-dropdown-hover w3-hover-orange">
-     <a class="w3-padding-16 w3-hover-orange" href="#">Drop Down</a>
+     <a class="w3-padding-16 w3-hover-orange" href="#">Projects</a>
      <div class="w3-dropdown-content w3-green w3-card-8">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
+      <a href="#">Portfolio</a>
+      <a href="#">Online Shopping</a>
+      <a href="#">Classified Ads</a>
   </li>
-  <li class="w3-hide-small"><a class="w3-hide-small w3-padding-16" href="#">Link 3</a></li>
   <li class="w3-hide-small w3-navitem w3-right"><input type="text" class="w3-input w3-border-0" placeholder="Search.."></li>
 </ul>
 
