Adds menu item in collapsed menu and improves UI

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <form action="#">
 
                 <p>
-                <label class="w3-label w3-text-green" autofocus><b>To</b></label>
+                <label class="w3-label w3-text-green"><b>To</b></label>
                 <input class="w3-input w3-border w3-sand" name="receiver" type="text" value="hello_navneet@hotmail.com" readonly="true"></p>
                 
                 <p>
@@ -291,11 +291,11 @@
                 <input class="w3-input w3-border w3-sand" name="sender" type="text" placeholder="your name" required></p>
 
                 <p>
-                <label class="w3-label w3-text-green"><b>Your Email</b></label>
-                <input class="w3-input w3-border w3-sand" name="email" type="email" placeholder="enter email" required></p>
+                <label class="w3-label w3-text-green"><b>Email</b></label>
+                <input class="w3-input w3-border w3-sand" name="email" type="email" placeholder="your email" required></p>
 
                 <p>
-                <label class="w3-label w3-text-green"><b>Your Website</b></label>
+                <label class="w3-label w3-text-green"><b>Website</b></label>
                 <input class="w3-input w3-border w3-sand" name="website" type="url" placeholder="your website (optional)"></p>
                 
                 <p>
