--- a/ui_components/navbar.html
+++ b/ui_components/navbar.html
@@ -13,7 +13,7 @@
   <li class="w3-hide-small"><a class="w3-padding-16" href="#">Achievements</a></li>
   <li class="w3-hide-small"><a class="w3-padding-16" href="#">Calendar</a></li>
   <li class="w3-hide-small w3-dropdown-hover w3-hover-orange">
-     <a class="w3-padding-16" href="#">Projects</a>
+     <a class="w3-padding-16" href="#">Projects <i class="fa fa-caret-down"></i></a>
      <div class="w3-dropdown-content w3-green w3-card-8">
       <a href="#">Portfolio</a>
       <a href="#">Online Shopping</a>
@@ -32,13 +32,13 @@
   <li><a class="w3-padding-16" href="#">Achievement</a></li>
   <li><a class="w3-padding-16" href="#">Calendar</a></li>
   <li class="w3-dropdown-hover w3-hover-orange">
-     <a class="w3-padding-16" href="#">Projects</a>
+     <a class="w3-padding-16" href="#">Projects <i class="fa fa-caret-down"></i></a>
      <div class="w3-dropdown-content w3-green w3-card-8">
       <a href="#">Portfolio</a>
       <a href="#">Online Shopping</a>
       <a href="#">Classified Ads</a>
   </li>
-  <li><a class="w3-hide-small w3-padding-16" href="#">Contact</a></li>
+  <li><a class="w3-padding-16" href="#">Contact</a></li>
   <li class="w3-navitem"><input type="search" class="w3-input w3-border-0" placeholder="Search.."></li>
   </ul>
 </div>
