Shows level of skills by pie chart

--- a/index.html
+++ b/index.html
@@ -19,34 +19,14 @@
           body {
               padding-top: 100px;
               padding-bottom: 20px;
-
-          }
-          footer{
-            text-align: center;
-          }
-          
-          h3{
-            text-align: center;
-          }
-          td a{
-            text-decoration: none;
-          }
-          .mg-40 {
-              margin-left: 40px;
-            }
-
-          @media only screen and (min-width: 1366px) {
-            .w3-container{
-              padding-left: 150px;
-              padding-right: 150px
-            }
-
           }
         </style>
         <!-- <link rel="stylesheet" href="css/bootstrap-theme.min.css"> -->
         <link rel="stylesheet" href="css/main.css">
-
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+        <!--Load the AJAX API-->
+        <script type="text/javascript" src="js/googlechart.js"></script>
     </head>
     <body ng-app="ngPortfolio">
         <!--[if lt IE 8]>
@@ -119,8 +99,7 @@
       <!-- EDUCATION -->
       <section ng-include="'components/education.html'"></section>
       <!-- SKILLS -->
-      <section ng-include="'components/skills.html'"></section>
-      <!-- TRAININGS -->
+      <!-- ONLINE TRAININGS AND ACHIEVEMENTS-->
       <section ng-include="'components/trainings.html'"></section>
       <!-- CONTACT US -->
       <section ng-include="'components/contactus.html'"></section>
@@ -134,7 +113,7 @@
 
         <script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
         <script src="scripts/app.js"></script>
-        <script src="js/portfolio.ctr.js" type="text/javascript"></script>
+        <script src="scripts/portfolio.ctr.js" type="text/javascript"></script>
         <script src="js/main.js"></script>
 
 
