Adds gmail and facebook_like icon in the social share sidenav and uses ng-click, ng-show, ng-hide to open and close, removes javascript function from main.js to open and close sidenav

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       <header ng-include="'components/navbar.html'"></header>
 
       <section ng-include="'components/siteheader.html'"></section>
+
       <!-- side nav that holds social sharing buttons -->
       <aside ng-include="'components/sidenav.html'"></aside>
-
 
         <section class="w3-container">
           <div class="w3-card-4">
@@ -121,6 +121,7 @@
         <script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/portfolio.ctr.js" type="text/javascript"></script>
+        <script src="scripts/candidates.fac.js" type="text/javascript"></script>
         <script src="js/main.js"></script>
 
         <script>
