--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
         <!--Load the AJAX API-->
         <script type="text/javascript" src="js/googlechart.js"></script>
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.min.js"></script>
     </head>
     <body ng-app="ngPortfolio">
         <!--[if lt IE 8]>
@@ -37,8 +38,6 @@
 
       <section ng-include="'components/siteheader.html'"></section>
 
-      <!-- side nav that holds social sharing buttons -->
-      <aside ng-include="'components/sidenav.html'"></aside>
 
         <section class="w3-container">
           <div class="w3-card-4">
