--- a/index.html
+++ b/index.html
@@ -48,26 +48,14 @@
                 <header class="w3-green">
                   <h3>May I introduce myself?</h3>
                 </header>
-                <p>First of all, I am a consistent performer as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</p>
+                <p>First of all, I am a <strong><em>consistent performer</em></strong> as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</p>
 
-                <p>Directors and Faculties of my institute found me a reliable and responsible person with excellent grammatical and written communication skill that eliminates ambiguity in my communication, hence they appointed me as Magazine Secretary of the Institute where I successfully contributed as proofreader and led a team of 8 members, by coordination and collaboration we prepared Institute’s Magazine for the Magazine competition organized by University of Pune.</p>
+                <p>Directors and Faculties of my institute found me a <strong><em>reliable</em></strong> and <strong><em>responsible</em></strong> person with excellent grammatical and written communication skill that eliminates ambiguity in my communication, hence they appointed me as Magazine Secretary of the Institute where I successfully contributed as proofreader and <strong><em>led a team</em></strong> of 8 members, by coordination and collaboration we prepared Institute’s Magazine for the Magazine competition organized by University of Pune.</p>
 
-                <div class="more w3-animate-top" ng-show="more">
-                  <p>I am a self-learner and I have been learning new skills online on Lynda.com and Udemy.com that improved my listening skill over time and now I am quite comfortable listening to American, British and Australian accent.</p>
+                <p>I am a <strong><em>self-learner</em></strong> and I have been learning new skills online on Lynda.com and Udemy.com that improved my listening skill over time and now I am quite comfortable listening to American, British and Australian accent.</p>
 
-                  <p>Using my Git and Github version control skills I can easily maintain my source code avoiding complexity and bugs, Contribute to a project from anywhere in the world.</p>
-
-                  <p>Using my hands-on experience of Grid System and Frameworks like <a href="http://www.w3schools.com/w3css/default.asp">W3.css</a>  and Bootstrap, and Charting Libraries like Google chart I can rapidly build responsive UI for your projects.</p>
-
-                  <p>Using SDLC, MVC and Angular Js we will be doing extremely fast test driven development of Web / Mobile Applications.</p>
-
-                  <p>If I talk about my hobbies, I am fond of learning new English phrases, listening life changing seminars.</p>
-                </div>
-
-                <button class="w3-btn w3-right w3-hover-white w3-blue" ng-click="more=true" ng-show="!more">Show More</button>
-                <button class="w3-btn w3-right w3-hover-white w3-blue" ng-click="more=!more" ng-show="more">Less</button>
+                  <button class="w3-btn w3-right w3-hover-white w3-blue" ng-click="more=true" ng-show="!more">Show More</button>
               </div><!-- col -->
-              
               
               <div class="w3-col l6" ng-controller="slidesCtrl">
                 <div class="w3-content" style="max-width:800px;position:relative">
@@ -106,6 +94,20 @@
                   <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;right:0" onclick="plusDivs(1)">❯</a>
                 </div>
               </div><!-- col -->  
+            </div><!-- row -->
+            <div class="w3-row-padding">
+              <div class="w3-col">
+                <div class="more w3-animate-top" ng-show="more">
+                  <p>Using my Git and Github version control skills I can easily maintain my source code <strong><em>avoiding complexity and bugs</em></strong>, <strong><em>Contribute</em></strong> to a project from anywhere in the world.</p>
+
+                  <p>Using my <strong><em>hands-on experience</em></strong> of Grid System and Frameworks like <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">W3.css</a>  and Bootstrap, and Charting Libraries like Google chart I can rapidly build <strong><em>modern responsive UI</em></strong> for your projects.</p>
+
+                  <p>Using SDLC, MVC and Angular Js we will be doing extremely fast test driven development of Web / Mobile Applications.</p>
+
+                  <p>If I talk about my hobbies, I am fond of learning new English phrases, listening life changing seminars.</p>
+                </div><!-- more -->
+                  <button class="w3-btn w3-right w3-hover-white w3-blue" ng-click="more=!more" ng-show="more">Less</button>
+              </div><!-- col -->
             </div><!-- row -->
           </div><!-- card -->
         </section>
