--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <!--Load the AJAX API-->
         <script type="text/javascript" src="js/googlechart.js"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.min.js"></script>
+<!--        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.min.js"></script>-->
     </head>
     <body ng-app="ngPortfolio">
         <!--[if lt IE 8]>
@@ -36,10 +36,7 @@
  
       <header ng-include="'components/navbar.html'"></header>
 
-      <ui-view></ui-view>
-
       <section ng-include="'components/siteheader.html'"></section>
-
 
         <section class="w3-container">
           <div class="w3-card-4">
@@ -128,15 +125,12 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
-        <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js" type="text/javascript"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/portfolio.ctr.js" type="text/javascript"></script>
         <script src="scripts/candidates.fac.js" type="text/javascript"></script>
-        <script src="node_modules/downloadjs/download.min.js"></script>
         <script src="js/main.js"></script>
         
         <script>
-
         /* Google Analytics: change UA-XXXXX-X to be your site's ID. */
            /* (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
