--- a/index.html
+++ b/index.html
@@ -125,9 +125,10 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
+        <script src="node_modules/angular-socialshare/dist/angular-socialshare.min.js"></script>
         <script src="scripts/app.js"></script>
-        <script src="scripts/portfolio.ctr.js" type="text/javascript"></script>
         <script src="scripts/candidates.fac.js" type="text/javascript"></script>
+        <script src="scripts/portfolio.ctr.js" type="text/javascript"></script>
         <script src="js/main.js"></script>
         
         <script>
