--- a/index.html
+++ b/index.html
@@ -6,28 +6,26 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>Hire the most creative Software Engineer</title>
-        <meta name="description" content="">
+        <title>Hire the Most Creative Software Engineer</title>
+        <meta name="description" content="Navneet is a consistent performer as despite tons of ups and downs in his life. He always secured approximately same score in my academics.
+        He is a self-learner and I have been learning new skills online on Lynda.com and Udemy.com that improved his listening skill over time and now he is quite comfortable listening to American, British and Australian accent.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <!-- font awesome CDN for social icons -->
         <link rel="stylesheet" type="text/css" href="css/font-awesome-4.6.3/css/font-awesome.min.css">
-        <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous"> -->
-        <link rel="stylesheet" type="text/css" href="css/w3.css">
-        <style>
-          body {
-              padding-top: 100px;
-              padding-bottom: 20px;
-          }
-          
-        </style>
+        <link rel="stylesheet" type="text/css" href="css/w3.css">  
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
         <!--Load the AJAX API-->
         <script type="text/javascript" src="js/googlechart.js"></script>
-<!--        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.1/Chart.min.js"></script>-->
+        <style>
+          body {
+            padding-top: 100px;
+            padding-bottom: 20px;
+          }
+        </style>
     </head>
     <body ng-app="ngPortfolio">
         <!--[if lt IE 8]>
@@ -99,7 +97,7 @@
                 <div class="more w3-animate-top" ng-show="more">
                   <p>Using SDLC, MVC and Angular Js we will be doing extremely fast test driven development of Web / Mobile Applications.</p>
 
-                  <p>My Institute found me a <strong><em>reliable</em></strong> and <strong><em>responsible</em></strong> person with excellent grammatical and written communication skill that eliminates ambiguity in my communication, hence they appointed me as Magazine Secretary of the Institute where I successfully contributed as proofreader and <strong><em>led a team</em></strong> of 8 members, by coordination and collaboration we prepared Institute’s Magazine for the Magazine competition organized by University of Pune.</p>
+                  <p>I was found as a <strong><em>reliable</em></strong> and <strong><em>responsible</em></strong> person by my institute with excellent grammatical and written communication skill that eliminates ambiguity in my communication, and was appointed as Magazine Secretary of the Institute where I successfully contributed as proofreader and <strong><em>led a team</em></strong> of 8 members, by coordination and collaboration we prepared Institute’s Magazine for the Magazine competition organized by University of Pune.</p>
                 </div><!-- more -->
                   <button class="w3-btn w3-right w3-hover-white w3-blue w3-margin-bottom" ng-click="more=!more" ng-show="more">Less</button>
               </div><!-- col -->
@@ -123,7 +121,6 @@
         <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
         <script type="text/javascript" src="js/vendor/jquery-1.11.2.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-
         <script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
         <script src="node_modules/angular-socialshare/dist/angular-socialshare.min.js"></script>
         <script src="scripts/app.js"></script>
