information update in resume

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <meta name="description" content="Navneet is a consistent performer as despite tons of ups and downs in his life. He always secured approximately same score in my academics.
         He is a self-learner and I have been learning new skills online on Lynda.com and Udemy.com that improved his listening skill over time and now he is quite comfortable listening to American, British and Australian accent.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <base target="_blank">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <!-- font awesome CDN for social icons -->
