Chrome browser specific css to fix bug in responsiveness of social connection icons

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             padding-top: 100px;
             padding-bottom: 20px;
           }
+          @media screen and (-webkit-min-device-pixel-ratio:0)
+              and (min-resolution:.001dpcm) {
+             .fmg-40 {
+                  margin-left: 40px;
+              }
+          }
         </style>
     </head>
     <body ng-app="ngPortfolio">
