Animates slide show, data updates

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <header class="w3-green">
                   <h3>May I introduce myself?</h3>
                 </header>
-                <p>First of all, I am a <strong><em>consistent performer</em></strong> as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</p>
+                <p>I am a <strong><em>consistent performer</em></strong> as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</p>
 
                 <p>I am a <strong><em>self-learner</em></strong> and I have been learning new skills online on Lynda.com and Udemy.com that improved my listening skill over time and now I am quite comfortable listening to American, British and Australian accent.</p>
 
@@ -68,28 +68,28 @@
                   </header>
 
                   <div class="w3-display-container mySlides">
-                    <img ng-src="img/quiz.jpg" style="width:100%">
+                    <img ng-src="img/quiz.jpg" style="width:100%" class="w3-animate-opacity">
                     <div class="w3-display-bottomleft w3-large w3-black">
                       Runner up in Technical Quiz
                     </div>
                   </div>
 
                   <div class="w3-display-container mySlides">
-                    <img src="img/webgeek.jpg" style="width:100%">
+                    <img src="img/webgeek.jpg" style="width:100%" class="w3-animate-opacity">
                     <div class="w3-display-bottomleft w3-large w3-black">
                       Won Web Design Competition
                     </div>
                   </div>
 
                   <div class="w3-display-container mySlides">
-                    <img ng-src="img/coverdesign.jpg" style="width:100%">
+                    <img ng-src="img/coverdesign.jpg" style="width:100%" class="w3-animate-opacity">
                     <div class="w3-display-bottomright w3-large w3-black">
                       Participated in Magazine Cover Design Competition
                     </div>
                   </div>
 
                   <div class="w3-display-container mySlides">
-                    <img ng-src="img/studentcouncil.jpg" style="width:100%">
+                    <img ng-src="img/studentcouncil.jpg" style="width:100%" class="w3-animate-opacity">
                     <div class="w3-display-bottomright w3-large w3-black">
                       Have been a member of student council
                     </div>
