Adds Ionic skill, and updates introduction

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </header>
                 <p>I am a <strong><em>consistent performer</em></strong> as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</p>
 
-                <p>I am a <strong><em>self-learner</em></strong> and I have been learning new skills online on Lynda.com and Udemy.com that improved my listening skill over time and now I am quite comfortable listening to American, British and Australian accent.</p>
+                <p>I am a <strong><em>self-learner</em></strong> and I have been learning new skills online on Lynda.com and Udemy.com that also improved my listening skill over time and now I am quite comfortable listening to different international English accent.</p>
 
                 <p>Using my Git and Github version control skills I can easily maintain my source code <strong><em>avoiding complexity and bugs</em></strong>, <strong><em>Contribute</em></strong> to a project from anywhere in the world.</p>
 
