--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
         <script type="text/javascript" src="js/vendor/jquery-1.11.2.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
-        <script src="node_modules/angular/angular.min.js" type="text/javascript"></script>
-        <script src="node_modules/angular-socialshare/dist/angular-socialshare.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+        <!-- <script src="node_modules/angular-socialshare/dist/angular-socialshare.min.js"></script> -->
         <script src="scripts/app.js"></script>
         <script src="scripts/candidates.fac.js" type="text/javascript"></script>
         <script src="scripts/portfolio.ctr.js" type="text/javascript"></script>
