--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <script type="text/javascript" src="js/vendor/jquery-1.11.2.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-        <!-- <script src="node_modules/angular-socialshare/dist/angular-socialshare.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-socialshare/2.3.3/angular-socialshare.min.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/candidates.fac.js" type="text/javascript"></script>
         <script src="scripts/portfolio.ctr.js" type="text/javascript"></script>
