--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           }
         </style>
     </head>
-    <body ng-app="ngPortfolio">
+    <body ng-app="ngPortfolio" ng-controller="homeCtrl">
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
@@ -50,6 +50,7 @@
                 <header class="w3-green">
                   <h3>May I introduce myself?</h3>
                 </header>
+
                 <p>I am a <strong><em>consistent performer</em></strong> as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</p>
 
                 <p>I am a <strong><em>self-learner</em></strong> and I have been learning new skills online on Lynda.com and Udemy.com that also improved my listening skill over time and now I am quite comfortable listening to different international English accent.</p>
@@ -61,7 +62,7 @@
                   <button class="w3-btn w3-right w3-hover-white w3-blue w3-card-4" ng-click="more=true" ng-show="!more">Show More</button>
               </div><!-- col -->
               
-              <div class="w3-col l6" ng-controller="slidesCtrl">
+              <div class="w3-col l6">
                 <div class="w3-content" style="max-width:800px;position:relative">
                   <header class="w3-green">
                     <h3><i class="fa fa-trophy" aria-hidden="true"></i> Achievements &amp; Participations</h3>
@@ -132,7 +133,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-socialshare/2.3.3/angular-socialshare.min.js"></script>
         <script src="scripts/app.js"></script>
         <script src="scripts/candidates.fac.js" type="text/javascript"></script>
-        <script src="scripts/portfolio.ctr.js" type="text/javascript"></script>
+        <script src="scripts/home.ctr.js" type="text/javascript"></script>
         <script src="js/main.js"></script>
         
         <script>
