--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
                 <p>Using my Git and Github version control skills I can easily maintain my source code <strong><em>avoiding complexity and bugs</em></strong>, <strong><em>Contribute</em></strong> to a project from anywhere in the world.</p>
 
-                <p>Using my <strong><em>hands-on experience</em></strong> of Grid System and Frameworks like <a href="http://www.w3schools.com/w3css/default.asp" target="_blank">W3.css</a>  and Bootstrap, and Charting Libraries like Google chart I can rapidly build <strong><em>modern responsive UI</em></strong> for your projects.</p>
+                <p>Using my <strong><em>hands-on experience</em></strong> of Grid System and Frameworks like <a class="help" href="http://www.w3schools.com/w3css/default.asp" target="_blank">W3.css</a>  and Bootstrap, and Charting Libraries like Google chart I can rapidly build <strong><em>modern responsive UI</em></strong> for your projects.</p>
 
                   <button class="w3-btn w3-right w3-hover-white w3-blue w3-card-4" ng-click="more=true" ng-show="!more">Show More</button>
               </div><!-- col -->
