--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
  
       <header ng-include="'components/navbar.html'"></header>
 
+      <div id="loader" class="w3-jumbo"><i class="fa fa-spinner w3-spin w3-text-green" ng-hide="Hide"></i></div>
+
       <section ng-include="'components/siteheader.html'"></section>
 
         <section class="w3-container">
