--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
 
         <section class="w3-container">
           <div class="w3-card-4">
-            <div class="w3-row-padding  w3-padding">
+            <div class="w3-row-padding">
               <div class="w3-col l6">
                 <header class="w3-green">
                   <h3>May I introduce myself?</h3>
                 </header>
 
-                <p>I am a <strong><em>consistent performer</em></strong> as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</p>
+                  <p>I am a <strong><em>consistent performer</em></strong> as despite tons of ups and downs in my life. I always secured approximately same score in my academics.</p>
 
-                <p>I am a <strong><em>self-learner</em></strong> and I have been learning new skills online on Lynda.com and Udemy.com that also improved my listening skill over time and now I am quite comfortable listening to different international English accent.</p>
+                  <p>I am a <strong><em>self-learner</em></strong> and I have been learning new skills online on Lynda.com and Udemy.com that also improved my listening skill over time and now I am quite comfortable listening to different international English accent.</p>
 
-                <p>Using my Git and Github version control skills I can easily maintain my source code <strong><em>avoiding complexity and bugs</em></strong>, <strong><em>Contribute</em></strong> to a project from anywhere in the world.</p>
+                  <p>Using my Git and Github version control skills I can easily maintain my source code <strong><em>avoiding complexity and bugs</em></strong>, <strong><em>Contribute</em></strong> to a project from anywhere in the world.</p>
 
-                <p>Using my <strong><em>hands-on experience</em></strong> of Grid System and Frameworks like <a class="help" href="http://www.w3schools.com/w3css/default.asp" target="_blank">W3.css</a>  and Bootstrap, and Charting Libraries like Google chart I can rapidly build <strong><em>modern responsive UI</em></strong> for your projects.</p>
+                  <p>Using my <strong><em>hands-on experience</em></strong> of Grid System and Frameworks like <a class="help" href="http://www.w3schools.com/w3css/default.asp" target="_blank">W3.css</a>  and Bootstrap, and Charting Libraries like Google chart I can rapidly build <strong><em>modern responsive UI</em></strong> for your projects.</p>
 
                   <button class="w3-btn w3-right w3-hover-white w3-blue w3-card-4" ng-click="more=true" ng-show="!more">Show More</button>
               </div><!-- col -->
