--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
       <div id="loader" class="w3-jumbo"><i class="fa fa-spinner w3-spin w3-text-green" ng-hide="Hide"></i></div>
 
       <section ng-include="'components/siteheader.html'"></section>
-<!--
+
         <section class="w3-container">
           <div class="w3-card-4">
             <div class="w3-row-padding">
               <div class="w3-col l6">
-                <header class="w3-green">
+                <!-- <header class="w3-green">
                   <h3>May I introduce myself?</h3>
                 </header>
 
@@ -59,12 +59,12 @@
 
                   <p>Using my Git and Github version control skills I can easily maintain my source code <strong><em>avoiding complexity and bugs</em></strong>, <strong><em>Contribute</em></strong> to a project from anywhere in the world.</p>
 
-                  <p>Using my <strong><em>hands-on experience</em></strong> of Grid System and Frameworks like <a class="help" href="http://www.w3schools.com/w3css/default.asp" target="_blank">W3.css</a>  and Bootstrap, and Charting Libraries like Google chart I can rapidly build <strong><em>modern responsive UI</em></strong> for your projects.</p>
+                  <p>Using my <strong><em>hands-on experience</em></strong> of Grid System and Frameworks like <a class="help" href="http://www.w3schools.com/w3css/default.asp" target="_blank">W3.css</a>  and Bootstrap, and Charting Libraries like Google chart I can rapidly build <strong><em>modern responsive UI</em></strong> for your projects.</p> 
 
                   <button class="w3-btn w3-right w3-hover-white w3-blue w3-card-4" ng-click="more=true" ng-show="!more">Show More</button>
-              </div> --><!-- col -->
+              </div> --> <!-- col -->
               
-<!--              <div class="w3-col l6">
+              <!-- <div class="w3-col l6">
                 <div class="w3-content" style="max-width:800px;position:relative">
                   <header class="w3-green">
                     <h3><i class="fa fa-trophy" aria-hidden="true"></i> Achievements &amp; Participations</h3>
@@ -100,27 +100,27 @@
                   <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;left:0" onclick="plusDivs(-1)">❮</a>
                   <a class="w3-btn-floating w3-hover-dark-grey" style="position:absolute;top:45%;right:0" onclick="plusDivs(1)">❯</a>
                 </div>
-              </div> --><!-- col -->  
-            <!-- </div> --><!-- row -->
-            <!-- <div class="w3-row w3-padding-left w3-padding-right">
+              </div> --> <!-- col -->  
+             </div><!-- row -->
+             <div class="w3-row w3-padding-left w3-padding-right">
               <div class="w3-col">
                 <div class="more w3-animate-top" ng-show="more">
                   <p>Using SDLC, MVC and Angular Js we will be doing extremely fast test driven development of Web / Mobile Applications.</p>
 
                   <p>I was found as a <strong><em>reliable</em></strong> and <strong><em>responsible</em></strong> person by my institute with excellent grammatical and written communication skill that eliminates ambiguity in my communication, and was appointed as Magazine Secretary of the Institute where I successfully contributed as proofreader and <strong><em>led a team</em></strong> of 8 members, by coordination and collaboration we prepared Institute’s Magazine for the Magazine competition organized by University of Pune.</p>
-                </div> --><!-- more -->
-                  <!-- <button class="w3-btn w3-right w3-hover-white w3-blue w3-margin-bottom" ng-click="more=!more" ng-show="more">Less</button>
-              </div> --><!-- col -->
-            <!-- </div> --><!-- row -->
-          <!-- </div> --><!-- card -->
-        <!-- </section> -->
-
-      <!-- EXPERIENCE AND SERVICES 
-      <section ng-include="'components/experienceandservices.html'"></section> -->
+                </div><!-- more -->
+                  <button class="w3-btn w3-right w3-hover-white w3-blue w3-margin-bottom" ng-click="more=!more" ng-show="more">Less</button>
+              </div><!-- col -->
+             </div><!-- row -->
+           </div><!-- card -->
+         </section>
 
       <!-- TIMELINE -->
       <section ng-include="'components/timeline.html'"></section>
-      
+
+      <!-- EXPERIENCE AND SERVICES  -->
+      <section ng-include="'components/experienceandservices.html'"></section>
+
       <!-- EDUCATION and TRAININGS-->
       <section ng-include="'components/educationandtraining.html'"></section>
       <!-- SKILLS and HOBBIES-->
