timeline header flips up

--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 
         <!-- font awesome CDN for social icons -->
         <link rel="stylesheet" type="text/css" href="css/font-awesome-4.6.3/css/font-awesome.min.css">
-        <link rel="stylesheet" type="text/css" href="css/w3.css">  
+        <link rel="stylesheet" type="text/css" href="css/w3.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/timeline.css">
+        <link rel="stylesheet" type="text/css" href="keyframeAnimations.css">
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 
         <!--Load the AJAX API-->
